UniDAQ.h

EXPORTS WORD  CALLBACK  Ixud_GetBufferStatus(WORD wBoardNo,WORD *wBufferStatus, DWORD *dwDataCount);
EXPORTS WORD  CALLBACK  Ixud_StartAI(WORD wBoardNo,WORD wChannel,WORD wConfig,float fSamplingRate,DWORD dwDataCount);
EXPORTS WORD  CALLBACK  Ixud_StartExtAI(WORD wBoardNo,WORD wActive,WORD wChannel,WORD wConfig,float fSamplingRate,DWORD dwPostDataCount,DWORD dwPreDataCount);
EXPORTS WORD  CALLBACK	Ixud_StartExtAnalogTrigger(WORD wBoardNo, WORD wActive, WORD wChannel, WORD wConfig, float fSamplingRate, DWORD dwDataCount, DWORD dwReserved ,float fAboveTrgVoltage, float fBelowTrgVoltage);
EXPORTS WORD  CALLBACK  Ixud_StartExtAIScan(WORD wBoardNo,WORD wChannels,WORD wActive,WORD wChannelList[],WORD wConfigList[],float fSamplingRate,DWORD dwPostDataCountPerChannel,DWORD dwPreDataCountPerChannel);
EXPORTS WORD  CALLBACK  Ixud_StartAIScan(WORD wBoardNo,WORD wChannels,WORD wChannelList[],WORD wConfigList[],float fSamplingRate, DWORD dwDataCountPerChannel);
EXPORTS WORD  CALLBACK  Ixud_GetAIBuffer(WORD wBoardNo,DWORD dwDataCount,float fValue[]);
EXPORTS WORD  CALLBACK  Ixud_GetAIBufferH(WORD wBoardNo,DWORD dwDataCount,DWORD hValue[]);
EXPORTS WORD  CALLBACK  Ixud_StopAI(WORD wBoardNo);
//Analog Output functions
EXPORTS WORD  CALLBACK  Ixud_ConfigAO(WORD wBoardNo, WORD wChannel, WORD wCfgCode);
EXPORTS WORD  CALLBACK  Ixud_WriteAOVoltage(WORD wBoardNo, WORD wChannel, float fValue);
EXPORTS WORD  CALLBACK  Ixud_WriteAOVoltageH(WORD wBoardNo, WORD wChannel, DWORD hValue);
EXPORTS WORD  CALLBACK  Ixud_WriteAOCurrent(WORD wBoardNo, WORD wChannel, float fValue);
EXPORTS WORD  CALLBACK  Ixud_WriteAOCurrentH(WORD wBoardNo, WORD wChannel, DWORD hValue);
EXPORTS WORD  CALLBACK  Ixud_StartAOVoltage(WORD wBoardNo, WORD wChannel,WORD wConfig, float fSamplingRate, DWORD dwDataCount,DWORD dwCycleNum, float fValue[]);
EXPORTS WORD  CALLBACK  Ixud_StartAOVoltageH(WORD wBoardNo, WORD wChannel,WORD wConfig, float fSamplingRate, DWORD dwDataCount,DWORD dwCycleNum, DWORD dwValue[]);
EXPORTS WORD  CALLBACK  Ixud_StopAO(WORD wBoardNo, WORD wChannel);