src/unidaq/UniDaqLibrary.java


	/**
	 * Original signature :
	 * <code>WORD Ixud_GetBufferStatus(WORD, WORD*, DWORD*)</code><br>
	 * <i>native declaration : line 303</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_GetBufferStatus(short, java.nio.ShortBuffer, java.nio.IntBuffer)}
	 *             and
	 *             {@link #Ixud_GetBufferStatus(short, com.sun.jna.ptr.ShortByReference, com.sun.jna.ptr.IntByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_GetBufferStatus(short wBoardNo, ShortByReference wBufferStatus,
			IntByReference dwDataCount);

	/**
	 * Original signature :
	 * <code>WORD Ixud_GetBufferStatus(WORD, WORD*, DWORD*)</code><br>
	 * <i>native declaration : line 303</i>
	 */
	public static native short Ixud_GetBufferStatus(short wBoardNo, ShortBuffer wBufferStatus, IntBuffer dwDataCount);

	/**
	 * Original signature :
	 * <code>WORD Ixud_StartAI(WORD, WORD, WORD, float, DWORD)</code><br>
	 * <i>native declaration : line 304</i>
	 */
	public static native short Ixud_StartAI(short wBoardNo, short wChannel, short wConfig, float fSamplingRate,
			int dwDataCount);

	/**
	 * Original signature :
	 * <code>WORD Ixud_StartExtAI(WORD, WORD, WORD, WORD, float, DWORD, DWORD)</code><br>
	 * <i>native declaration : line 305</i>
	 */
	public static native short Ixud_StartExtAI(short wBoardNo, short wActive, short wChannel, short wConfig,
			float fSamplingRate, int dwPostDataCount, int dwPreDataCount);

	/**
	 * Original signature :
	 * <code>WORD Ixud_StartExtAnalogTrigger(WORD, WORD, WORD, WORD, float, DWORD, DWORD, float, float)</code><br>
	 * <i>native declaration : line 306</i>
	 */
	public static native short Ixud_StartExtAnalogTrigger(short wBoardNo, short wActive, short wChannel, short wConfig,
			float fSamplingRate, int dwDataCount, int dwReserved, float fAboveTrgVoltage, float fBelowTrgVoltage);

	/**
	 * Original signature :
	 * <code>WORD Ixud_StartExtAIScan(WORD, WORD, WORD, WORD[], WORD[], float, DWORD, DWORD)</code><br>
	 * <i>native declaration : line 307</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_StartExtAIScan(short, short, short, java.nio.ShortBuffer, java.nio.ShortBuffer, float, int, int)}
	 *             and
	 *             {@link #Ixud_StartExtAIScan(short, short, short, com.sun.jna.ptr.ShortByReference, com.sun.jna.ptr.ShortByReference, float, int, int)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_StartExtAIScan(short wBoardNo, short wChannels, short wActive,
			ShortByReference wChannelList, ShortByReference wConfigList, float fSamplingRate,
			int dwPostDataCountPerChannel, int dwPreDataCountPerChannel);

	/**
	 * Original signature :
	 * <code>WORD Ixud_StartExtAIScan(WORD, WORD, WORD, WORD[], WORD[], float, DWORD, DWORD)</code><br>
	 * <i>native declaration : line 307</i>
	 */
	public static native short Ixud_StartExtAIScan(short wBoardNo, short wChannels, short wActive,
			ShortBuffer wChannelList, ShortBuffer wConfigList, float fSamplingRate, int dwPostDataCountPerChannel,
			int dwPreDataCountPerChannel);

	/**
	 * Original signature :
	 * <code>WORD Ixud_StartAIScan(WORD, WORD, WORD[], WORD[], float, DWORD)</code><br>
	 * <i>native declaration : line 308</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_StartAIScan(short, short, java.nio.ShortBuffer, java.nio.ShortBuffer, float, int)}
	 *             and
	 *             {@link #Ixud_StartAIScan(short, short, com.sun.jna.ptr.ShortByReference, com.sun.jna.ptr.ShortByReference, float, int)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_StartAIScan(short wBoardNo, short wChannels, ShortByReference wChannelList,
			ShortByReference wConfigList, float fSamplingRate, int dwDataCountPerChannel);

	/**
	 * Original signature :
	 * <code>WORD Ixud_StartAIScan(WORD, WORD, WORD[], WORD[], float, DWORD)</code><br>
	 * <i>native declaration : line 308</i>
	 */
	public static native short Ixud_StartAIScan(short wBoardNo, short wChannels, ShortBuffer wChannelList,
			ShortBuffer wConfigList, float fSamplingRate, int dwDataCountPerChannel);

	/**
	 * Original signature :
	 * <code>WORD Ixud_GetAIBuffer(WORD, DWORD, float[])</code><br>
	 * <i>native declaration : line 309</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_GetAIBuffer(short, int, java.nio.FloatBuffer)} and
	 *             {@link #Ixud_GetAIBuffer(short, int, com.sun.jna.ptr.FloatByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_GetAIBuffer(short wBoardNo, int dwDataCount, FloatByReference fValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_GetAIBuffer(WORD, DWORD, float[])</code><br>
	 * <i>native declaration : line 309</i>
	 */
	public static native short Ixud_GetAIBuffer(short wBoardNo, int dwDataCount, FloatBuffer fValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_GetAIBufferH(WORD, DWORD, DWORD[])</code><br>
	 * <i>native declaration : line 310</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_GetAIBufferH(short, int, java.nio.IntBuffer)} and
	 *             {@link #Ixud_GetAIBufferH(short, int, com.sun.jna.ptr.IntByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_GetAIBufferH(short wBoardNo, int dwDataCount, IntByReference hValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_GetAIBufferH(WORD, DWORD, DWORD[])</code><br>
	 * <i>native declaration : line 310</i>
	 */
	public static native short Ixud_GetAIBufferH(short wBoardNo, int dwDataCount, IntBuffer hValue);

	/**
	 * Original signature : <code>WORD Ixud_StopAI(WORD)</code><br>
	 * <i>native declaration : line 311</i>
	 */
	public static native short Ixud_StopAI(short wBoardNo);

	/**
	 * Analog Output functions<br>
	 * Original signature : <code>WORD Ixud_ConfigAO(WORD, WORD, WORD)</code><br>
	 * <i>native declaration : line 314</i>
	 */
	public static native short Ixud_ConfigAO(short wBoardNo, short wChannel, short wCfgCode);

	/**
	 * Original signature :
	 * <code>WORD Ixud_WriteAOVoltage(WORD, WORD, float)</code><br>
	 * <i>native declaration : line 315</i>
	 */
	public static native short Ixud_WriteAOVoltage(short wBoardNo, short wChannel, float fValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_WriteAOVoltageH(WORD, WORD, DWORD)</code><br>
	 * <i>native declaration : line 316</i>
	 */
	public static native short Ixud_WriteAOVoltageH(short wBoardNo, short wChannel, int hValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_WriteAOCurrent(WORD, WORD, float)</code><br>
	 * <i>native declaration : line 317</i>
	 */
	public static native short Ixud_WriteAOCurrent(short wBoardNo, short wChannel, float fValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_WriteAOCurrentH(WORD, WORD, DWORD)</code><br>
	 * <i>native declaration : line 318</i>
	 */
	public static native short Ixud_WriteAOCurrentH(short wBoardNo, short wChannel, int hValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_StartAOVoltage(WORD, WORD, WORD, float, DWORD, DWORD, float[])</code><br>
	 * <i>native declaration : line 319</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_StartAOVoltage(short, short, short, float, int, int, java.nio.FloatBuffer)}
	 *             and
	 *             {@link #Ixud_StartAOVoltage(short, short, short, float, int, int, com.sun.jna.ptr.FloatByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_StartAOVoltage(short wBoardNo, short wChannel, short wConfig, float fSamplingRate,
			int dwDataCount, int dwCycleNum, FloatByReference fValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_StartAOVoltage(WORD, WORD, WORD, float, DWORD, DWORD, float[])</code><br>
	 * <i>native declaration : line 319</i>
	 */
	public static native short Ixud_StartAOVoltage(short wBoardNo, short wChannel, short wConfig, float fSamplingRate,
			int dwDataCount, int dwCycleNum, FloatBuffer fValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_StartAOVoltageH(WORD, WORD, WORD, float, DWORD, DWORD, DWORD[])</code><br>
	 * <i>native declaration : line 320</i><br>
	 * 
	 * @deprecated use the safer methods
	 *             {@link #Ixud_StartAOVoltageH(short, short, short, float, int, int, java.nio.IntBuffer)}
	 *             and
	 *             {@link #Ixud_StartAOVoltageH(short, short, short, float, int, int, com.sun.jna.ptr.IntByReference)}
	 *             instead
	 */
	@Deprecated
	public static native short Ixud_StartAOVoltageH(short wBoardNo, short wChannel, short wConfig, float fSamplingRate,
			int dwDataCount, int dwCycleNum, IntByReference dwValue);

	/**
	 * Original signature :
	 * <code>WORD Ixud_StartAOVoltageH(WORD, WORD, WORD, float, DWORD, DWORD, DWORD[])</code><br>
	 * <i>native declaration : line 320</i>
	 */
	public static native short Ixud_StartAOVoltageH(short wBoardNo, short wChannel, short wConfig, float fSamplingRate,
			int dwDataCount, int dwCycleNum, IntBuffer dwValue);

	/**
	 * Original signature : <code>WORD Ixud_StopAO(WORD, WORD)</code><br>
	 * <i>native declaration : line 321</i>
	 */
	public static native short Ixud_StopAO(short wBoardNo, short wChannel);

	public static class UCHAR extends PointerType {
		public UCHAR(Pointer address) {
			super(address);
		}

		public UCHAR() {
			super();
		}
	};

	public static class PVOID extends PointerType {
		public PVOID(Pointer address) {
			super(address);
		}

		public PVOID() {
			super();
		}
	};

	public static class HANDLE extends PointerType {
		public HANDLE(Pointer address) {
			super(address);
		}

		public HANDLE() {
			super();
		}
	};
}
